fixed partly invisible item in sidelist

--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -220,6 +220,7 @@ strong {
   font-size: @font-size-small;
   overflow-x: hidden;
   background: @gray-lighter;
+  top: 0;
 
   .nav > li {
     display: block;
